hover states and more styling

--- a/advice-generator-app-main/index.html
+++ b/advice-generator-app-main/index.html
@@ -56,8 +56,16 @@
       margin-left: -24px;
     }
 
+    .button:hover {
+      box-shadow: -1px 1px 16px 7px rgba(82,255,168,0.75);
+      -webkit-box-shadow: -1px 1px 16px 7px rgba(82,255,168,0.75);
+      -moz-box-shadow: -1px 1px 16px 7px rgba(82,255,168,0.75);
+      transition: box-shadow .5s;
+    }
+
     .dice {
       margin:auto;
+      width:20px;
     }
 
     .flex-wrapper {
@@ -74,11 +82,11 @@
   <section class="advice-section">
     <div class="container">
       <div class="flex-wrapper">
-      <div class="p-5 pb-12 text-center card shadow-lg rounded-lg max-w-md flex-row items-center">
+      <div class="p-10 pb-12 text-center card shadow-lg rounded-lg max-w-md flex-row items-center">
         <p class="advice">ADVICE # <span id="advice-number"></span></p>
-        <h1 class="quote py-5">Advice text goes here</h1>
+        <h1 class="quote py-7">Advice text goes here</h1>
         <img id="desktop-devider" class="md:visible" src="images/pattern-divider-desktop.svg" alt="divider">
-        <img id="mobile-devider" class="sm:invisible" src="images/pattern-divider-mobile.svg" alt="divider">
+        <!--<img id="mobile-devider" class="sm:invisible" src="images/pattern-divider-mobile.svg" alt="divider">-->
         <button onclick="getAdvice()" class="button">
           <img class="dice" src="images/icon-dice.svg" alt="dice">
         </button>
